@@ -24,7 +24,6 @@
     "also"
     "apply"
     "apply_end"
-    "arities"
     "assume"
     "attribute_setup"
     "axiomatization"
@@ -37,8 +36,6 @@
     "chapter"
     "class"
     "class_deps"
-    "classes"
-    "classrel"
     "codatatype"
     "code_datatype"
     "coinductive"
@@ -346,13 +343,10 @@
   '("ML"
     "ML_file"
     "abbreviation"
-    "arities"
     "attribute_setup"
     "axiomatization"
     "bundle"
     "class"
-    "classes"
-    "classrel"
     "codatatype"
     "code_datatype"
     "coinductive"
