@@ -25,7 +25,6 @@
     "also"
     "apply"
     "apply_end"
-    "arities"
     "assume"
     "atom_decl"
     "attribute_setup"
@@ -45,8 +44,6 @@
     "chapter"
     "class"
     "class_deps"
-    "classes"
-    "classrel"
     "codatatype"
     "code_datatype"
     "code_deps"
@@ -481,7 +478,6 @@
     "ML_file"
     "abbreviation"
     "adhoc_overloading"
-    "arities"
     "atom_decl"
     "attribute_setup"
     "axiomatization"
@@ -490,8 +486,6 @@
     "bundle"
     "case_of_simps"
     "class"
-    "classes"
-    "classrel"
     "codatatype"
     "code_datatype"
     "code_identifier"
