@@ -73,19 +73,7 @@ val _ =
 
 (** theory commands **)
 
-(* classes and sorts *)
-
-val _ =
-  Outer_Syntax.command @{command_spec "classes"} "declare type classes"
-    (Scan.repeat1 (Parse.binding -- Scan.optional ((@{keyword "\<subseteq>"} || @{keyword "<"}) |--
-        Parse.!!! (Parse.list1 Parse.class)) [])
-      >> (Toplevel.theory o fold Axclass.axiomatize_class_cmd));
-
-val _ =
-  Outer_Syntax.command @{command_spec "classrel"} "state inclusion of type classes (axiomatic!)"
-    (Parse.and_list1 (Parse.class -- ((@{keyword "\<subseteq>"} || @{keyword "<"})
-        |-- Parse.!!! Parse.class))
-    >> (Toplevel.theory o Axclass.axiomatize_classrel_cmd));
+(* sorts *)
 
 val _ =
   Outer_Syntax.local_theory @{command_spec "default_sort"}
@@ -110,10 +98,6 @@ val _ =
   Outer_Syntax.command @{command_spec "nonterminal"}
     "declare syntactic type constructors (grammar nonterminal symbols)"
     (Parse.and_list1 Parse.binding >> (Toplevel.theory o Sign.add_nonterminals_global));
-
-val _ =
-  Outer_Syntax.command @{command_spec "arities"} "state type arities (axiomatic!)"
-    (Scan.repeat1 Parse.arity >> (Toplevel.theory o fold Axclass.axiomatize_arity_cmd));
 
 
 (* consts and syntax *)
